--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-seo": "^6.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0"
