--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "redirects": [
     { 
-      "source": "/flatbed",
+      "source": "/flatbed/",
       "destination": "/service/flatbed", 
       "permanent": true
     },
