--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@next/third-parties": "^14.0.4",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "next-seo": "^6.4.0",
