--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@emotion/styled": "^11.11.0",
     "@next/third-parties": "^14.0.4",
     "framer-motion": "^10.16.5",
-    "next": "14.0.3",
+    "next": "^14.2.29",
     "next-seo": "^6.4.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "^14.2.29"
   }
 }
